--- a/src/app/components/factura/create-invoice/create-invoice.component.html
+++ b/src/app/components/factura/create-invoice/create-invoice.component.html
@@ -37,7 +37,7 @@
                                         <span class="text-muted pt-2 font-size-sm d-block">Datos Factura</span></h3>
                                 </div>
                                 <div class="card-toolbar">
-                                    <a class="btn btn-info"><span class="svg-icon menu-icon">
+                                    <a class="btn btn-success"><span class="svg-icon menu-icon">
                                         <svg width="24px" height="24px" viewBox="0 0 24 24" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                                             <defs></defs>
                                             <g id="Stockholm-icons-/-Communication-/-Add-user" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
@@ -79,7 +79,7 @@
                                         <span class="text-muted pt-2 font-size-sm d-block">Datos Producto</span></h3>
                                 </div>
                                 <div class="card-toolbar">
-                                    <a class="btn btn-info"><span class="svg-icon menu-icon">
+                                    <a class="btn btn-success"><span class="svg-icon menu-icon">
                                         <svg width="24px" height="24px" viewBox="0 0 24 24" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                                             <g id="Stockholm-icons-/-Shopping-/-Gift" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                                                 <rect id="bound" x="0" y="0" width="24" height="24"></rect>
@@ -151,7 +151,7 @@
                                         <span class="text-muted pt-2 font-size-sm d-block"></span></h3>
                                 </div>
                                 <div class="card-toolbar">
-                                    <a class="btn btn-info"><span class="svg-icon menu-icon">
+                                    <a class="btn btn-primary"><span class="svg-icon menu-icon">
                                         <svg width="24px" height="24px" viewBox="0 0 24 24" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                                             <g id="Stockholm-icons-/-Files-/-Downloaded-file" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                                                 <polygon id="Shape" points="0 0 24 0 24 24 0 24"></polygon>
