--- a/src/app/components/cliente/edit-client/edit-client.component.html
+++ b/src/app/components/cliente/edit-client/edit-client.component.html
@@ -31,7 +31,7 @@
                     <!--begin::Container-->
                     <div class="container">
 
-                        <div class="card card-custom card-shadowless rounded-top-0 mb-7">
+                        <div *ngIf="load_data" class="card card-custom card-shadowless rounded-top-0 mb-7">
                             <div class="card-body p-0">
                                 <div class="row">
                                     <div class="col-12 text-center mb-7 mt-7">
@@ -44,8 +44,8 @@
                             </div>
                         </div>
 
-                        <ng-container>
-                            <ng-container>
+                        <ng-container *ngIf="!load_data">
+                            <ng-container *ngIf="data">
                                 <div class="card card-custom card-shadowless rounded-top-0">
                                     <!--begin::Body-->
                                     <div class="card-header border-0 pt-5">
@@ -61,7 +61,7 @@
                                         <div class="row justify-content-center py-8 px-8 py-lg-15 px-lg-10">
                                             <div class="col-xl-12 col-xxl-10">
                                                 <!--begin::Wizard Form-->
-                                                <form class="form" id="kt_form" #registroForm="ngForm">
+                                                <form class="form" id="kt_form" #actualizarForm="ngForm" (ngSubmit)="actualizar(actualizarForm)">
                                                     <div class="row justify-content-center">
                                                         <div class="col-xl-9">
                                                             <!--begin::Wizard Step 1-->
@@ -72,7 +72,7 @@
                                                                 <div class="form-group row">
                                                                     <label class="col-xl-3 col-lg-3 col-form-label">Dni (*)</label>
                                                                     <div class="col-lg-9 col-xl-9">
-                                                                        <input required="true" class="form-control form-control-solid form-control-lg" name="nombres" type="text" placeholder="Nombres" />
+                                                                        <input required="true" class="form-control form-control-solid form-control-lg" name="identificacion" [(ngModel)]="cliente.identificacion" type="text" placeholder="Identificación" />
                                                                     </div>
                                                                 </div>
                                                                 <!--end::Group-->
@@ -80,7 +80,7 @@
                                                                 <div class="form-group row">
                                                                     <label class="col-xl-3 col-lg-3 col-form-label">Nombre (*)</label>
                                                                     <div class="col-lg-9 col-xl-9">
-                                                                        <input required="true" class="form-control form-control-solid form-control-lg" name="apellidos" type="text" placeholder="Apellidos" />
+                                                                        <input required="true" class="form-control form-control-solid form-control-lg" name="nombre" [(ngModel)]="cliente.nombre" type="text" placeholder="Nombre" />
                                                                     </div>
                                                                 </div>
                                                                 <!--end::Group-->
@@ -88,7 +88,7 @@
                                                                 <div class="form-group row">
                                                                     <label class="col-xl-3 col-lg-3 col-form-label">Dirección (*)</label>
                                                                     <div class="col-lg-9 col-xl-9">
-                                                                        <input required="true" class="form-control form-control-solid form-control-lg" name="apellidos" type="text" placeholder="Apellidos" />
+                                                                        <input required="true" class="form-control form-control-solid form-control-lg" name="direccion" [(ngModel)]="cliente.direccion" type="text" placeholder="Dirección" />
                                                                     </div>
                                                                 </div>
                                                                 <!--end::Group-->
@@ -96,7 +96,7 @@
                                                                 <div class="form-group row">
                                                                     <label class="col-xl-3 col-lg-3 col-form-label">Fecha de Creacion (*)</label>
                                                                     <div class="col-lg-9 col-xl-9">
-                                                                        <input required="true" class="form-control form-control-solid form-control-lg" name="fecha" type="date" />
+                                                                        <input required="true" class="form-control form-control-solid form-control-lg" name="fechaCreacion" [(ngModel)]="cliente.fechaCreacion" type="date" placeholder="fecha" />
                                                                     </div>
                                                                 </div>
                                                                 <!--end::Group-->
@@ -104,7 +104,7 @@
                                                                 <div class="form-group row">
                                                                     <label class="col-xl-3 col-lg-3 col-form-label">Correo eletrónico (*)</label>
                                                                     <div class="col-lg-9 col-xl-9">
-                                                                        <input required="true" class="form-control form-control-solid form-control-lg" name="email" type="email" placeholder="Correo eletrónico" />
+                                                                        <input required="true" class="form-control form-control-solid form-control-lg" name="email" [(ngModel)]="cliente.correo" type="email" placeholder="Correo eletrónico" />
                                                                     </div>
                                                                 </div>
                                                                 <!--end::Group-->
@@ -112,10 +112,10 @@
                                                                 <div class="form-group row">
                                                                     <label class="col-xl-3 col-lg-3 col-form-label">Activo (*)</label>
                                                                     <div class="col-lg-9 col-xl-9">
-                                                                        <select required="true" name="genero" class="form-control form-control-solid form-control-lg">
-                                                                            <option value="" selected disabled>Seleccionar</option>
-                                                                            <option value="Si">Si</option>
-                                                                            <option value="No">No</option>
+                                                                        <select required="true" name="activo" [(ngModel)]="cliente.activo" class="form-control form-control-solid form-control-lg">
+                                                                            <option [ngValue]="undefined" selected disabled>Seleccionar...</option>
+                                                                            <option [ngValue]="1">Si</option>
+                                                                            <option [ngValue]="0">No</option>
                                                                         </select>
                                                                     </div>
                                                                 </div>
@@ -129,10 +129,10 @@
                                                                     <a class="btn btn-light-primary font-weight-bolder px-9 py-4" [routerLink]="['/cliente']">Regresar</a>
                                                                 </div>
                                                                 <div>
-                                                                    <button type="submit" class="btn btn-success font-weight-bolder px-9 py-4">Registrar</button>
-                                                                    <button class="btn btn-success font-weight-bolder px-9 py-4" type="button" disabled>
+                                                                    <button *ngIf="!btnActualizar" type="submit" class="btn btn-success font-weight-bolder px-9 py-4">Actualizar</button>
+                                                                    <button *ngIf="btnActualizar" class="btn btn-success font-weight-bolder px-9 py-4" type="button" disabled>
                                                                         <span class="spinner-border spinner-border-sm" aria-hidden="true"></span>
-                                                                        <span role="status">Registrando...</span>
+                                                                        <span role="status">Actualizando...</span>
                                                                     </button>
                                                                 </div>
                                                             </div>
@@ -147,7 +147,7 @@
                                     <!--end::Body-->
                                 </div>
                             </ng-container>
-                            <ng-container>
+                            <ng-container *ngIf="!data">
                                 <div class="row">
                                     <div class="col-12">
                                         <app-not-found></app-not-found>
