--- a/src/app/components/cliente/edit-client/edit-client.component.html
+++ b/src/app/components/cliente/edit-client/edit-client.component.html
@@ -96,7 +96,7 @@
                                                                 <div class="form-group row">
                                                                     <label class="col-xl-3 col-lg-3 col-form-label">Fecha de Creacion (*)</label>
                                                                     <div class="col-lg-9 col-xl-9">
-                                                                        <input required="true" class="form-control form-control-solid form-control-lg" name="fechaCreacion" [(ngModel)]="cliente.fechaCreacion" type="date" placeholder="fecha" />
+                                                                        <input disabled="true" required="true" class="form-control form-control-solid form-control-lg" name="fechaCreacion" [(ngModel)]="cliente.fechaCreacion" type="date" placeholder="fecha" />
                                                                     </div>
                                                                 </div>
                                                                 <!--end::Group-->
