--- a/src/app/components/producto/create-product/create-product.component.html
+++ b/src/app/components/producto/create-product/create-product.component.html
@@ -1,1 +1,142 @@
-<p>create-product works!</p>
+<div class="d-flex flex-column flex-root">
+    <!--begin::Page-->
+    <div class="d-flex flex-row flex-column-fluid page">
+        <app-sidebar></app-sidebar>
+        <div class="d-flex flex-column flex-row-fluid wrapper" id="kt_wrapper">
+            <!--begin::Header-->
+            <app-top></app-top>
+            <!--end::Header-->
+            <!--begin::Content-->
+            <div class="content d-flex flex-column flex-column-fluid" id="kt_content">
+                <!--begin::Subheader-->
+                <div class="subheader py-2 py-lg-4 subheader-solid" id="kt_subheader">
+                    <div class="container-fluid d-flex align-items-center justify-content-between flex-wrap flex-sm-nowrap">
+                        <!--begin::Info-->
+                        <div class="d-flex align-items-center flex-wrap mr-2">
+                            <!--begin::Page Title-->
+                            <h5 class="text-dark font-weight-bold mt-2 mb-2 mr-5">Dashboard</h5>
+                            <!--end::Page Title-->
+                            <!--begin::Actions-->
+                            <div class="subheader-separator subheader-separator-ver mt-2 mb-2 mr-4 bg-gray-200"></div>
+                            <!--end::Actions-->
+                        </div>
+                        <!--end::Info-->
+
+                    </div>
+                </div>
+                <!--end::Subheader-->
+                <!--begin::Entry-->
+                <div class="d-flex flex-column-fluid">
+                    <!--begin::Container-->
+                    <div class="container">
+
+                        <div class="card card-custom card-shadowless rounded-top-0">
+                            <!--begin::Body-->
+                            <div class="card-header border-0 pt-5">
+                                <h3 class="card-title align-items-start flex-column">
+                                    <span class="card-label font-weight-bolder text-dark">Nuevo producto</span>
+                                    <span class="text-muted mt-3 font-weight-bold font-size-sm">Formulario de un nuevo producto</span>
+                                </h3>
+                                <div class="card-toolbar">
+                                    <a [routerLink]="['/producto']" class="btn btn-primary">Regresar</a>
+                                </div>
+                            </div>
+                            <div class="card-body p-0">
+                                <div class="row justify-content-center py-8 px-8 py-lg-15 px-lg-10">
+                                    <div class="col-xl-12 col-xxl-10">
+                                        <!--begin::Wizard Form-->
+                                        <form class="form" id="kt_form" #registroForm="ngForm" (ngSubmit)="registrar(registroForm)">
+                                            <div class="row justify-content-center">
+                                                <div class="col-xl-9">
+                                                    <!--begin::Wizard Step 1-->
+                                                    <div class="my-5 step" data-wizard-type="step-content" data-wizard-state="current">
+                                                        <h5 class="text-dark font-weight-bold mb-10">Datos:</h5>
+
+                                                        <!--begin::Group-->
+                                                        <div class="form-group row">
+                                                            <label class="col-xl-3 col-lg-3 col-form-label">Código (*)</label>
+                                                            <div class="col-lg-9 col-xl-9">
+                                                                <input required="true" class="form-control form-control-solid form-control-lg" name="codigo" [(ngModel)]="producto.codigo" type="text" placeholder="Código" />
+                                                            </div>
+                                                        </div>
+                                                        <!--end::Group-->
+                                                        <!--begin::Group-->
+                                                        <div class="form-group row">
+                                                            <label class="col-xl-3 col-lg-3 col-form-label">Nombre (*)</label>
+                                                            <div class="col-lg-9 col-xl-9">
+                                                                <input required="true" class="form-control form-control-solid form-control-lg" name="nombre" [(ngModel)]="producto.nombre" type="text" placeholder="Nombre" />
+                                                            </div>
+                                                        </div>
+                                                        <!--end::Group-->
+                                                        <!--begin::Group-->
+                                                        <div class="form-group row">
+                                                            <label class="col-xl-3 col-lg-3 col-form-label">Precio (*)</label>
+                                                            <div class="col-lg-9 col-xl-9">
+                                                                <input required="true" class="form-control form-control-solid form-control-lg" name="precio" [(ngModel)]="producto.precio" type="text" placeholder="Precio" />
+                                                            </div>
+                                                        </div>
+                                                        <!--end::Group-->
+                                                        <!--begin::Group-->
+                                                        <div class="form-group row">
+                                                            <label class="col-xl-3 col-lg-3 col-form-label">Fecha de Creacion (*)</label>
+                                                            <div class="col-lg-9 col-xl-9">
+                                                                <input disabled="true" required="true" class="form-control form-control-solid form-control-lg" name="fecha" [(ngModel)]="producto.fechaCreacion" type="date" placeholder="Fecha Creación" />
+                                                            </div>
+                                                        </div>
+                                                        <!--end::Group-->
+                                                        <!--begin::Group-->
+                                                        <div class="form-group row">
+                                                            <label class="col-xl-3 col-lg-3 col-form-label">Stock (*)</label>
+                                                            <div class="col-lg-9 col-xl-9">
+                                                                <input required="true" class="form-control form-control-solid form-control-lg" name="inventario" [(ngModel)]="producto.inventario" type="email" placeholder="Inventario" />
+                                                            </div>
+                                                        </div>
+                                                        <!--end::Group-->
+                                                        <!--begin::Group-->
+                                                        <div class="form-group row">
+                                                            <label class="col-xl-3 col-lg-3 col-form-label">Activo (*)</label>
+                                                            <div class="col-lg-9 col-xl-9">
+                                                                <select required="true" name="activo" [(ngModel)]="producto.activo" class="form-control form-control-solid form-control-lg">
+                                                                    <option [ngValue]="undefined" selected disabled>Seleccionar...</option>
+                                                                    <option [ngValue]="1">Si</option>
+                                                                    <option [ngValue]="0">No</option>
+                                                                </select>
+                                                            </div>
+                                                        </div>
+                                                        <!--end::Group-->
+                                                    </div>
+                                                    <!--end::Wizard Step 1-->
+
+                                                    <!--begin::Wizard Actions-->
+                                                    <div class="d-flex justify-content-between border-top pt-10 mt-15">
+                                                        <div class="mr-2">
+                                                            <a class="btn btn-light-primary font-weight-bolder px-9 py-4" [routerLink]="['/producto']">Regresar</a>
+                                                        </div>
+                                                        <div>
+                                                            <button *ngIf="!btn_registrar" type="submit" class="btn btn-success font-weight-bolder px-9 py-4">Registrar</button>
+                                                            <button *ngIf="btn_registrar" class="btn btn-success font-weight-bolder px-9 py-4" type="button" disabled>
+                                                                <span class="spinner-border spinner-border-sm" aria-hidden="true"></span>
+                                                                <span role="status">Registrando...</span>
+                                                            </button>
+                                                        </div>
+                                                    </div>
+                                                    <!--end::Wizard Actions-->
+                                                </div>
+                                            </div>
+                                        </form>
+                                        <!--end::Wizard Form-->
+                                    </div>
+                                </div>
+                            </div>
+                            <!--end::Body-->
+                        </div>
+                    </div>
+                    <!--end::Container-->
+                </div>
+                <!--end::Entry-->
+            </div>
+            <!--end::Content-->
+
+        </div>
+    </div>
+</div>
