--- a/src/app/components/producto/index-product/index-product.component.html
+++ b/src/app/components/producto/index-product/index-product.component.html
@@ -57,9 +57,9 @@
                                             <div class="row align-items-center">
                                                 <div class="col-md-6 my-2 my-md-0">
                                                     <div class="input-group">
-                                                        <input type="text" class="form-control" placeholder="Busqueda general" name="filtro">
+                                                        <input type="text" class="form-control" placeholder="Busqueda general" name="filtro" [(ngModel)]="filtro">
                                                         <div class="input-group-append">
-                                                            <button class="btn btn-primary" type="button"><svg width="24px" height="15px" viewBox="0 0 24 24" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                                            <button (click)="filtrarProductos()" class="btn btn-primary" type="button"><svg width="24px" height="15px" viewBox="0 0 24 24" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                                                                 <g id="Stockholm-icons-/-General-/-Search" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                                                                     <rect id="bound" x="0" y="0" width="24" height="24"></rect>
                                                                     <path d="M14.2928932,16.7071068 C13.9023689,16.3165825 13.9023689,15.6834175 14.2928932,15.2928932 C14.6834175,14.9023689 15.3165825,14.9023689 15.7071068,15.2928932 L19.7071068,19.2928932 C20.0976311,19.6834175 20.0976311,20.3165825 19.7071068,20.7071068 C19.3165825,21.0976311 18.6834175,21.0976311 18.2928932,20.7071068 L14.2928932,16.7071068 Z" id="Path-2" fill="#000000" fill-rule="nonzero" opacity="0.3"></path>
@@ -96,27 +96,27 @@
                                                     </tr>
                                                 </thead>
                                                 <tbody>
-                                                    <tr>
-                                                        <td class="pl-0 py-5">
-                                                            <span class="text-dark-75 font-weight-bolder d-block font-size-lg">#1</span>
+                                                    <tr *ngFor="let producto of productos">
+                                                        <td class="pl-7 py-5">
+                                                            <span class="text-dark-75 font-weight-bolder d-block font-size-lg">#{{ producto.idProducto }}</span>
                                                         </td>
                                                         <td>
-                                                            <span class="text-dark-75 font-weight-bolder d-block font-size-lg">1234</span>
+                                                            <span class="text-dark-75 font-weight-bolder d-block font-size-lg">{{ producto.codigo }}</span>
                                                         </td>
                                                         <td>
-                                                            <span class="text-dark-75 font-weight-bolder d-block font-size-lg">Tornillo</span>
+                                                            <span class="text-dark-75 font-weight-bolder d-block font-size-lg">{{ producto.nombre }}</span>
                                                         </td>
                                                         <td>
-                                                            <span class="text-dark-75 font-weight-bolder d-block font-size-lg">$10.000</span>
+                                                            <span class="text-dark-75 font-weight-bolder d-block font-size-lg">${{ producto.precio }}</span>
                                                         </td>
                                                         <td>
-                                                            <span class="text-dark-75 font-weight-bolder d-block font-size-lg">300</span>
+                                                            <span class="text-dark-75 font-weight-bolder d-block font-size-lg">{{ producto.inventario }}</span>
                                                         </td>
                                                         <td>
-                                                            <span class="text-dark-75 font-weight-bolder d-block font-size-lg">Si</span>
+                                                            <span class="text-dark-75 font-weight-bolder d-block font-size-lg">{{ producto.activo }}</span>
                                                         </td>
                                                         <td>
-                                                            <span class="text-dark-75 font-weight-bolder d-block font-size-lg">10/01/2024</span>
+                                                            <span class="text-dark-75 font-weight-bolder d-block font-size-lg">{{ producto.fechaCreacion }}</span>
                                                         </td>
 
 
